fixed html tag alignment issue, re-org'd images folder

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1724,7 +1724,7 @@
 		line-height: 1.5;
 		margin: 0 0 2em 0;
 		text-transform: uppercase;
-		letter-spacing: 0.35em;
+		letter-spacing: 0.15em;
 	}
 
 		h2 a, h3 a, h4 a, h5 a, h6 a {
